# learning-opengl

./: .gitignore  CMakeLists.txt  README.md  gl_lib.hpp  gl_macros.hpp  gl_shader.hpp  main.cpp
include/: gl_error.hpp  glfw_app.hpp  glfw_window.hpp
